# tempy

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  action.yml  noxfile.py  pyproject.toml
.github/workflows/: action.yml  nox.yml
tests/: test_tempy.py
