[tool.poetry]
name = "tempy"
version = "0.1.0"
description = ""
authors = ["ali <silkenpy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
cacheout = "^0.14.1"
dynaconf = "^3.2.2"
requests = "^2.31.0"
PySocks = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^7.3.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
black = "^23.7.0"
mypy = "^1.5.1"
typeguard = "^4.1.3"
pylint = "^2.17.5"
nox = "^2023.4.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
