[tool.poetry]
name = "tempy"
version = "0.1.0"
description = ""
authors = ["ali <silkenpy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pysocks = "^1.7.1"
requests = "^2.31.0"
dynaconf = "^3.2.2"
cacheout = "^0.14.1"
fastapi = "^0.103.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pylint = "^2.17.5"
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
nox = "^2023.4.22"
coverage = "^7.3.1"
safety = "^2.3.5"
typeguard = "^4.1.5"
pytype = { version = "^2023.9.11", python = ">=3.10,<3.11"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
